syntax = "proto3";

package holms.types.money.accounting;
option csharp_namespace = "HOLMS.Types.Money.Accounting";
option go_package = "money/accounting";

import "primitive/uuid.proto";

message AccountIndicator {
	holms.types.primitive.Uuid id = 1;
}
